--- a/localai-desktop/src/index.html
+++ b/localai-desktop/src/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LocalaiDesktop</title>
-  <base href="/">
+  <title>LocalAI Desktop</title>
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    // Minimal polyfill for libraries that expect `global` in the browser
+    if (typeof window !== 'undefined' && typeof (window).global === 'undefined') {
+      (window).global = window;
+    }
+  </script>
 </head>
 <body>
   <app-root></app-root>
